# ClawSpan

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  clawspan.toml  vcpkg.json
config/: clawspan.toml  clawspan_dist.toml
daemon-service/audit/: audit_service.cc  audit_service.h
daemon-service/capability/ax/: CMakeLists.txt  ax_capability.cc  ax_element.h  ax_provider.h  ax_provider_windows.cc  ax_provider_windows.h  ax_text_serializer.cc  ax_text_serializer.h
daemon-service/channel3/: channel3_grpc_server.cc  channel3_grpc_server.h
daemon-service/core/: capability_service.cc  module_config.cc  module_manager.cc  security_chain.cc  task_registry.cc
daemon-service/daemon/: daemon.cc  daemon.h  main.cc  vmm_launcher.cc  vmm_launcher.h
daemon-service/ipc/: frame.cc  frame.h  pipe_security.h  ui_service.cc  windows_ipc_client.cc  windows_ipc_server.cc
daemon-service/security/filter/: security_filter.cc  security_filter.h
daemon-service/vm_channel/gateway/: gateway_host_server.cc  gateway_host_server.h
daemon-service/vm_channel/grpc/: vm_channel_grpc_server.cc  vm_channel_grpc_server.h
docs/: development-standards.md
include/capability/ax/: ax_capability.h
include/common/: error.h  log.h  safe_handle.h  status.h  status_converter.h  toml_utility.h  types.h  unaligned.h
include/core/: task_registry.h
include/core/base/: capability.h  confirm.h  core_config.h  module.h  module_config.h  module_manager.h  security.h  service.h
include/ipc/: ipc_client.h  ipc_server.h  ui_service.h  windows_ipc_client.h  windows_ipc_server.h
include/vmm/: vm_manager.h  vmm_channel.h  vsock_bridge_server.h  vsock_server.h
include/vmm/hvf/: hv_call.h
mcp/client/clawspan-gui/: SKILL.md
mcp/server/: channel3_grpc_client.py  channel3_tunnel.py  launch_mcp_server.py  mcp_server.py  vm_channel_grpc_client.py  vm_channel_tunnel.py  vsock_client.py
mcp/server/gateway/: __init__.py  vm_gateway_client.py
proto/: channel3.proto  gateway.proto  vm_channel.proto
scripts/: build-rootfs.sh  clawspan-vsock-port100.reg  generate_channel3_python_stubs.py  generate_vm_channel_python_stubs.py  install.ps1  register-vsock-port100.ps1  remove-docs-from-history.ps1  set-commit-msg.cmd
tests/common/: CMakeLists.txt  safe_handle_test.cc  status_test.cc
tests/core/: CMakeLists.txt  audit_sink_contract_test.cc  channel3_grpc_service_test.cc  gateway_host_server_test.cc  module_config_test.cc  security_chain_test.cc  task_registry_test.cc
tests/ipc/: CMakeLists.txt  frame_codec_test.cc  ui_message_factory_test.cc
tests/python/: test_channel3_grpc_client.py  test_gateway_e2e_smoke.py  test_gateway_envelope_payload_matrix.py  test_gateway_protocol_compat.py  test_gateway_reconnect.py  test_gateway_robustness.py  test_mcp_server.py  test_vm_channel_grpc_client.py  test_vm_gateway_client.py
tests/security/filter/: CMakeLists.txt  security_filter_test.cc
tests/vmm/: CMakeLists.txt  vm_manager_test.cc  vsock_bridge_server_test.cc  vsock_server_test.cc
tools/: ax_test_client.py  confirm_client.py  grpc_smoke.py  mcp_client.py  mcp_server.py  requirements.txt  run_grpc_smoke.sh  vsock_smoke.py
ui/: App.cs  ClawSpanUI.csproj  Program.cs
ui/Channel/: DaemonChannel.cs  MessageDispatcher.cs  Messages.cs
ui/Forms/: ConfirmDialog.cs  MainForm.cs
ui/Models/: AppState.cs  OperationRecord.cs  TaskRecord.cs
ui/Panels/: StatusPanel.cs  TasksPanel.cs
vmm/: CMakeLists.txt  main.cc  vmm_app.cc  vmm_app.h
vmm/ipc/: vsock_bridge_server.cc  vsock_server.cc
vmm/tools/: vsock_probe_main.cc
vmm/vm/: vm_manager.cc  wsl_com_interfaces.h  wslapi_loader.h
